# blueshare2go

./: .gitignore  CMakeLists.txt  README.md  overview.md  release.sh
blueshare/: build.sh  nsiggi.c  nsiggi.py
blueshare/core/: blueshare.c  zero.c
blueshare/pkg/: blueshare.py
scripts/: build.sh  create_network.sh
src/core/: blueshare_core.h
src/platform/: platform_interface.h
tests/constitutional/: test_constitutional_compliance.sh
